--- a/index.html
+++ b/index.html
@@ -9,22 +9,45 @@
       <link href="https://fonts.googleapis.com/css?family=Asul:700|Noto+Serif:700|Playfair+Display:700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:700i" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Asul:700|Noto+Serif:700" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700" rel="stylesheet">
     <title></title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="text-center">
         <h1>Poppy's Pizza Parlor</h1>
+        <h5>Established in 1981</h5>
+        <img src="img/pizza.png" alt="pizza icon">
       </div>
       <div class="row">
         <div class="col">
           <form id="pizza-form">
             <label>Enter a name for your order:</label>
             <input id="order-name" class="form-control input-text" type="text" placeholder="first and last name" required>
+            <!-- <div id="pizzaOrderAddresses">
+              <div class="address">
+                <div class="form-group">
+                  <label for="street">Street:</label>
+                  <input type="text" class="form-control street">
+                </div>
+                <div class="form-group">
+                  <label for="city">City:</label>
+                  <input type="text" class="form-control city">
+                </div>
+                <div class="form-group">
+                  <label for="state">State:</label>
+                  <input type="text" class="form-control state">
+                </div>
+                <div class="form-group">
+                  <label for="zip">Zip Code:</label>
+                  <input type="text" class="form-control zip">
+                </div>
+              </div>
+            </div> -->
             <h3 class="font-label">Pick your pizza size:</h3>
             <div class="form-group">
               <select id="size" class="form-control input-text" required>
-                <option value="" selected="selected" class="input-text" required>Select a Size</option>
+                <option class="input-text" selected="selected" required>Select a Size</option>
                 <option name="pizzaSize" value="Small">Small</option>
                 <option name="pizzaSize" value="Medium">Medium</option>
                 <option name="pizzaSize" value="Large">Large</option>
@@ -33,19 +56,19 @@
             </div>
             <h3 class="font-label">Pick your pizza toppings:</h3>
             <div class="form-group input-text" required>
-              <input type="checkbox" name="topping" value="Sausage"> Sausage<br>
-              <input type="checkbox" name="topping" value="Pepperoni"> Pepperoni<br>
-              <input type="checkbox" name="topping" value="Mushrooms"> Mushrooms<br>
-              <input type="checkbox" name="topping" value="Green Peppers"> Green Peppers<br>
-              <input type="checkbox" name="topping" value="Olives"> Olives<br>
-              <input type="checkbox" name="topping" value="Extra Cheese"> Extra Cheese + $1<br>
+              <input class="toppings" type="checkbox" name="topping" value=" Sausage"> Sausage<br>
+              <input class="toppings" type="checkbox" name="topping" value=" Pepperoni"> Pepperoni<br>
+              <input class="toppings" type="checkbox" name="topping" value=" Mushrooms"> Mushrooms<br>
+              <input class="toppings" type="checkbox" name="topping" value=" Green Peppers"> Green Peppers<br>
+              <input class="toppings" type="checkbox" name="topping" value=" Olives"> Olives<br>
+              <input class="toppings" type="checkbox" name="topping" value=" Extra Cheese"> Extra Cheese + $1<br>
             </div>
             <div class="text-center mb-5">
               <button type="submit" class="btn btn-outline-warning form-control btn-style font-label">Place My Order</button>
 
               <div class="form-group col-md-11" id="order-output">
 
-                <dic class="show-order"></div>
+                <div class="show-order"></div>
               </div>
             </div>
           </form>
